@@ -562,7 +562,8 @@ void ExultStudio::write_shape_info
 	{
 	if (vgafile)
 		{
-		Shapes_vga_file *svga = (Shapes_vga_file *) vgafile;
+		Shapes_vga_file *svga = 
+				(Shapes_vga_file *) vgafile->get_ifile();
 					// Make sure data's been read in.
 		svga->read_info(false, true);//+++++BG?
 		svga->write_info(false);//++++BG?
