@@ -1,3 +1,9 @@
+2002-02-07  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* shapes/shapewrite.cc: Use num_shapes, not 1024.
+	* mapedit/studio.cc:  Fixed ::write_shape_info().
+	* mapedit/shapefile.cc:  Compare filenames ignoring case.
+
 2002-02-05  Max Horn  <max@quendi.de>
 
 	* server/servemsg.cc: changed to fix building over here
